fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/Cross_Reference__c.object-meta.xml
<CustomObject>
    <label>Cross Reference</label>
    <nameField>
        <displayFormat>Xref-{00000000}</displayFormat>
        <label>Cross Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>