fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Competitor_Code_Cleansed__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Code_Cleansed__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
Competitor_Product_Code__c 
, &quot;(&quot;, &quot;&quot;) 
, &quot;)&quot;, &quot;&quot;) 
, &quot; &quot;, &quot;&quot;) 
, &quot;-&quot;, &quot;&quot;) 
, &quot;/&quot;, &quot;&quot;) 
, &quot;\\&quot;, &quot;&quot;) 
, &quot;_&quot;, &quot;&quot;) 
, &quot;.&quot;, &quot;&quot;) 
, &quot;#&quot;, &quot;&quot;) 
, &quot;!&quot;, &quot;&quot;) 
, &quot;@&quot;, &quot;&quot;) 
, &quot;$&quot;, &quot;&quot;) 
, &quot;%&quot;, &quot;&quot;) 
, &quot;^&quot;, &quot;&quot;) 
, &quot;&amp;&quot;, &quot;&quot;) 
, &quot;*&quot;, &quot;&quot;) 
, &quot;+&quot;, &quot;&quot;) 
, &quot;[&quot;, &quot;&quot;) 
, &quot;]&quot;, &quot;&quot;) 
, &quot;:&quot;, &quot;&quot;) 
, &quot;;&quot;, &quot;&quot;) 
, &quot;,&quot;, &quot;&quot;) 
, &quot;?&quot;, &quot;&quot;) 
, &quot;|&quot;, &quot;&quot;) 
, &quot;{&quot;, &quot;&quot;) 
, &quot;}&quot;, &quot;&quot;) 
, &quot;=&quot;, &quot;&quot;) 
, &quot;~&quot;, &quot;&quot;) 
, &quot;`&quot;, &quot;&quot;)</formula>
    <label>Competitor Code Cleansed</label>
    <type>Text</type>
</CustomField>