fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor</label>
    <length>64</length>
    <type>Text</type>
</CustomField>