fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price__c</fullName>
    <description>Field to show price of the competitor product.</description>
    <inlineHelpText>Field to show price of the competitor product.</inlineHelpText>
    <label>Competitor Avg Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>