fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Competitor_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Code__c</fullName>
    <externalId>true</externalId>
    <label>Competitor Product Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>