fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Competitor_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Description__c</fullName>
    <label>Competitor Product Description</label>
    <type>TextArea</type>
</CustomField>