fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/CompetitorHighPrice__c.field-meta.xml
<CustomField>
    <fullName>CompetitorHighPrice__c</fullName>
    <label>Competitor High Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>