fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/CompetitorLowPrice__c.field-meta.xml
<CustomField>
    <fullName>CompetitorLowPrice__c</fullName>
    <label>Competitor Low Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>