fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Google_Search__c.field-meta.xml
<CustomField>
    <fullName>Google_Search__c</fullName>
    <formula>HYPERLINK(&quot;https://www.google.com/#q=&quot; +  Competitor_Name__c + &quot;+&quot; + Competitor_Product_Code__c,&quot;Click Here&quot;)</formula>
    <label>Google Search</label>
    <type>Text</type>
</CustomField>