fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Key_Difference__c.field-meta.xml
<CustomField>
    <fullName>Key_Difference__c</fullName>
    <label>Key Difference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>