fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TFX Cross 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Competitive Cross References</relationshipLabel>
    <relationshipName>Cross_References</relationshipName>
    <type>Lookup</type>
</CustomField>