fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/ProductClassBU__c.field-meta.xml
<CustomField>
    <fullName>ProductClassBU__c</fullName>
    <formula>Product__r.Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Class / BU</label>
    <type>Text</type>
</CustomField>