fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/TFX_Product__c.field-meta.xml
<CustomField>
    <fullName>TFX_Product__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TFX Product</label>
    <type>Text</type>
</CustomField>