fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/TFX_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>TFX_Product_Description__c</fullName>
    <formula>Product__r.Description</formula>
    <label>TFX Cross 1 Description</label>
    <type>Text</type>
</CustomField>