fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/TFXProduct2Description__c.field-meta.xml
<CustomField>
    <fullName>TFXProduct2Description__c</fullName>
    <formula>TFXProduct2__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TFX Cross 2 Description</label>
    <type>Text</type>
</CustomField>