fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/fields/TFXProduct2Search__c.field-meta.xml
<CustomField>
    <fullName>TFXProduct2Search__c</fullName>
    <formula>HYPERLINK(&quot;https://www.google.com/#q=&quot; +  TFXProduct2Name__c  + &quot;+&quot; +  TFX_Product_Description__c ,&quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TFX Cross 2 Search</label>
    <type>Text</type>
</CustomField>