fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/Anesthesia_Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>Anesthesia_Cross_Reference</fullName>
    <active>true</active>
    <label>Anesthesia Cross Reference</label>
</RecordType>