fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>Cross_Reference</fullName>
    <active>true</active>
    <label>Cross Reference</label>
</RecordType>