fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/IA_Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>IA_Cross_Reference</fullName>
    <active>true</active>
    <label>IA Cross Reference</label>
</RecordType>