fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/Latin_America_Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>Latin_America_Cross_Reference</fullName>
    <active>true</active>
    <label>Latin America Cross Reference</label>
</RecordType>