fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/Respiratory_Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>Respiratory_Cross_Reference</fullName>
    <active>true</active>
    <description>Cross reference for Respiratory BU</description>
    <label>Respiratory Cross Reference</label>
</RecordType>