fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/Specialty_Markets_Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>Specialty_Markets_Cross_Reference</fullName>
    <active>true</active>
    <label>Specialty Markets Cross-Reference</label>
</RecordType>