fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/Surgical_Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>Surgical_Cross_Reference</fullName>
    <active>true</active>
    <label>Surgical Cross Reference</label>
</RecordType>