fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/recordTypes/Vascular_Cross_Reference.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Cross_Reference</fullName>
    <active>true</active>
    <label>Vascular Cross Reference</label>
</RecordType>