fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/listViews/All_VA_Cross_Reference.listView-meta.xml
<ListView>
    <fullName>All_VA_Cross_Reference</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Competitor_Product_Code__c</columns>
    <columns>Competitor_Product_Description__c</columns>
    <columns>Product__c</columns>
    <columns>TFX_Product_Description__c</columns>
    <columns>TFXProductSearch__c</columns>
    <columns>TFXProduct2__c</columns>
    <columns>TFXProduct2Description__c</columns>
    <columns>TFXProduct2Search__c</columns>
    <filterScope>Mine</filterScope>
    <label>All VA Cross Reference</label>
    <sharedTo>
        <roleAndSubordinates>Vascular_President</roleAndSubordinates>
    </sharedTo>
</ListView>