fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/listViews/Needs_Attention.listView-meta.xml
<ListView>
    <fullName>Needs_Attention</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Product_Code__c</columns>
    <columns>Competitor_Product_Description__c</columns>
    <columns>Product__c</columns>
    <columns>Google_Search__c</columns>
    <columns>Percent_Match__c</columns>
    <columns>Rating__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Needs Attention</label>
    <language>en_US</language>
</ListView>