fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/listViews/Resp_Cross_Reference_No_Comp_Descrip.listView-meta.xml
<ListView>
    <fullName>Resp_Cross_Reference_No_Comp_Descrip</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Competitor_Code_Cleansed__c</columns>
    <columns>Competitor_Product_Code__c</columns>
    <columns>Competitor_Product_Description__c</columns>
    <columns>Created_Date_Time__c</columns>
    <columns>Google_Search__c</columns>
    <columns>Key_Difference__c</columns>
    <columns>Percent_Match__c</columns>
    <columns>Rating__c</columns>
    <columns>Status__c</columns>
    <columns>Product__c</columns>
    <columns>TFX_Product__c</columns>
    <columns>TFX_Product_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_Product_Description__c</field>
        <operation>equals</operation>
    </filters>
    <label>Resp. Cross Reference (No Comp Descrip.)</label>
    <language>en_US</language>
    <sharedTo>
        <group>Respiratory_Marketing</group>
    </sharedTo>
</ListView>