fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/listViews/Surgical.listView-meta.xml
<ListView>
    <fullName>Surgical</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Competitor_Product_Code__c</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Competitor_Product_Description__c</columns>
    <columns>Key_Difference__c</columns>
    <columns>Product__c</columns>
    <columns>Google_Search__c</columns>
    <columns>Percent_Match__c</columns>
    <columns>Rating__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TFX_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cross_Reference__c.Surgical_Cross_Reference</value>
    </filters>
    <label>Surgical</label>
    <language>en_US</language>
</ListView>