fullSandbox11072023/force-app/main/default/objects/Cross_Reference__c/listViews/teste3424.listView-meta.xml
<ListView>
    <fullName>teste3424</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Competitor_Code_Cleansed__c</columns>
    <columns>Competitor_Product_Code__c</columns>
    <columns>Competitor_Product_Description__c</columns>
    <columns>Created_Date_Time__c</columns>
    <columns>Key_Difference__c</columns>
    <columns>Percent_Match__c</columns>
    <columns>Rating__c</columns>
    <columns>Status__c</columns>
    <columns>Product__c</columns>
    <columns>TFX_Product__c</columns>
    <columns>TFX_Product_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_Product_Code__c</field>
        <operation>equals</operation>
        <value>5220</value>
    </filters>
    <label>test</label>
</ListView>